VZDEV/src/objects/CCPM_manualLeadWebservice__mdt.object
<CustomObject>
    <description>This Metadata contains all fields required to be parsed from the request</description>
    <fields>
        <fullName>CCPM_fieldPOS__c</fullName>
        <label>FieldPOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_fieldtobeUpdated__c</fullName>
        <description>This refers to the field that needs to be updated</description>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the specific field is active to be queried and updated</description>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCPM_isRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Manual Lead Webservice</label>
    <pluralLabel>Manual Lead Webservice</pluralLabel>
</CustomObject>